# HexGloop

./: .copier-answers.yml  .gitignore  README.md  build.gradle  changelog.md  gradle.properties  modrinth.md  pyproject.toml
.github/workflows/: build_docs.yml
Scripts/: genMultiFocus.js
common/: build.gradle
common/src/main/java/com/samsthenerd/hexgloop/: HexGloop.java  HexGloopClient.java
common/src/main/resources/: architectury.common.json  hexgloop-common.mixins.json
common/src/main/resources/assets/hexgloop/blockstates/: accelerator.json  charged_amethyst_block.json  conjured_redstone.json  enlightenment_bridge.json  enlightenment_gate.json  gloop_block.json  gloop_energizer.json  gloopy_slate_chest.json  hexxed_glass.json  iotic_dial.json  mind_pedestal.json  mirror_pedestal.json  pedestal.json  sentinel_bed.json  slate_chest.json  slate_frame.json  slate_lamp.json  syncetrix.json  thinking_carpet.json  wave_locus.json
common/src/main/resources/assets/hexgloop/lang/: en_us.json  ru_ru.json  zh_cn.json
common/src/main/resources/data/hexgloop/advancements/: gloopvancement.json  sketchy_foods.json  syncvancement.json
common/src/main/resources/data/hexgloop/recipes/: accelerator.json  amogus_fidget.json  bee_staff.json  blaze_staff.json  carrot_staff.json  casters_coin.json  casting_frog.json  casting_ring.json  charged_amethyst_block.json  charged_amethyst_block_reverse.json  coping_saw.json  craft_dyebook.json  dreidel_fidget.json  dummy_cover.json  empty_jar.json  enlightenment_bridge.json  enlightenment_gate.json  essence_stone.json  focal_pendant.json  focal_ring.json  gloop.json  gloop_dye.json  gloop_dye_item.json  gloop_energizer.json  gloopifact.json  gloopy_slate_chest.json  hand_mirror.json  heart_pigment.json  hex_blade.json  hex_pickaxe.json  hexxed_glass.json  hexxy_plush.json  hexxyos.json  inventorty.json  item_flaying_test.json  library_card.json  lovely_staff.json  mept_log.json  mind_jar.json  mind_pedestal.json  (+16 more)
common/src/main/resources/data/spectrum/recipes/: casting_potion.json  dummy_recipe.json
common/src/main/resources/data/trinkets/entities/: hexgloop.json
common/src/main/resources/resourcepacks/dyeablestaffs/: pack.mcmeta
devdocs/: README.md  datapacks.md  staves.md
doc/: README.md  hexdoc.toml  nodemon.json  properties.toml
doc/resources/assets/hexcasting/lang/: en_us.flatten.json5
doc/src/hexdoc_hexgloop/: _hooks.py
doc/src/hexdoc_hexgloop/_templates/: index.css.jinja
doc/src/hexdoc_hexgloop/_templates/pages/hexgloop/: gloopcipe.html.jinja  itemflay.html.jinja
doc/src/hexdoc_hexgloop/_templates/pages/patchouli/: smelting.html.jinja
doc/src/hexdoc_hexgloop/book/: glooprecipe.py
doc/src/hexdoc_hexgloop/book/page/: __init__.py  pages.py
docs/: CNAME  index.html
docs/meta/: sitemap-minecraft.json  sitemap.json
docs/v/0.1.1/1.0.dev0/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/0.1.1/1.0.dev0/zh_cn/: .sitemap-marker.json  index.html  index.js
docs/v/0.1.1/en_us/: index.html
docs/v/0.1.1/zh_cn/: index.html
docs/v/0.2.0/1.0.dev0/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/0.2.0/1.0.dev0/zh_cn/: .sitemap-marker.json  index.html  index.js
docs/v/0.2.0/en_us/: index.html
docs/v/0.2.0/zh_cn/: index.html
docs/v/1.19.2-0.0.4/: .sitemap-marker.json  index.html
docs/v/1.19.2-0.0.4/zh_cn/: .sitemap-marker.json  index.html
docs/v/1.19.2-0.1.0/: .sitemap-marker.json  index.html
docs/v/1.19.2-0.1.0/zh_cn/: .sitemap-marker.json  index.css  index.html
docs/v/latest/: .sitemap-marker.json  index.css  index.html
docs/v/latest/main/en_us/: .sitemap-marker.json  index.css  index.html  index.js
docs/v/latest/main/en_us/basics/: index.html
docs/v/latest/main/en_us/basics/gloopytweaks/: index.html
docs/v/latest/main/en_us/basics/gloopytweaks_client/: index.html
docs/v/latest/main/en_us/casting/: index.html
docs/v/latest/main/en_us/greatwork/: index.html
docs/v/latest/main/en_us/greatwork/accelerator/: index.html
docs/v/latest/main/en_us/greatwork/coping_saw/: index.html
docs/v/latest/main/en_us/greatwork/item_flaying/: index.html
docs/v/latest/main/en_us/greatwork/library_card/: index.html
docs/v/latest/main/en_us/greatwork/loci/: index.html
docs/v/latest/main/en_us/greatwork/syncetrix/: index.html
docs/v/latest/main/en_us/greatwork/undulator/: index.html
docs/v/latest/main/en_us/interop/: index.html
docs/v/latest/main/en_us/interop/addons/: index.html
docs/v/latest/main/en_us/items/: index.html
docs/v/latest/main/en_us/items/casters_coin/: index.html
docs/v/latest/main/en_us/items/casting_frog/: index.html
docs/v/latest/main/en_us/items/casting_potion/: index.html
docs/v/latest/main/en_us/items/casting_ring/: index.html
docs/v/latest/main/en_us/items/chests/: index.html
docs/v/latest/main/en_us/items/dyebook/: index.html
docs/v/latest/main/en_us/lore/: index.html
docs/v/latest/main/en_us/patterns/: index.html
docs/v/latest/main/ru_ru/: .sitemap-marker.json  index.css  index.html  index.js
docs/v/latest/main/ru_ru/basics/: index.html
docs/v/latest/main/ru_ru/casting/: index.html
docs/v/latest/main/ru_ru/greatwork/: index.html
docs/v/latest/main/ru_ru/interop/: index.html
docs/v/latest/main/ru_ru/items/: index.html
docs/v/latest/main/ru_ru/lore/: index.html
docs/v/latest/main/ru_ru/patterns/: index.html
docs/v/latest/main/zh_cn/: .sitemap-marker.json  index.css  index.html  index.js  textures.css
docs/v/latest/main/zh_cn/basics/: index.html
docs/v/latest/main/zh_cn/casting/: index.html
docs/v/latest/main/zh_cn/greatwork/: index.html
docs/v/latest/main/zh_cn/interop/: index.html
docs/v/latest/main/zh_cn/items/: index.html
docs/v/latest/main/zh_cn/lore/: index.html
docs/v/latest/main/zh_cn/patterns/: index.html
docs/v/latest/zh_cn/: .sitemap-marker.json  index.html
docs/zh_cn/: index.html
fabric/: build.gradle
fabric/src/main/resources/: fabric.mod.json  hexgloop-fabric.mixins.json
forge/: build.gradle
forge/src/main/resources/: hexgloop-forge.mixins.json  pack.mcmeta
(+985 files in other folders)
